tests/types/told_pragma_syntax1.nim
discard """
  errormsg: "invalid indentation"
"""

type Foo = object {.final.}
